<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/restaurant_item_name" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="142dp"
        android:layout_height="145dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="35dp"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        app:srcCompat="@drawable/example_icon" />

    <TextView
        android:id="@+id/issues"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/icon"
        android:layout_toRightOf="@+id/icon"
        android:text="#" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/issues"
        android:layout_toRightOf="@+id/issues"
        android:text="Data" />

    <ImageView
        android:id="@+id/hazard"
        android:layout_width="53dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        app:srcCompat="@drawable/high" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/issues"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="-35dp"
        android:layout_marginRight="-35dp"
        android:layout_toStartOf="@+id/hazard"
        android:layout_toLeftOf="@+id/hazard"
        android:text="@string/restaurant_item_hazard_level" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/icon"
        android:layout_toRightOf="@+id/icon"
        android:text="@string/restaurant_item_num_issues" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/issues"
        android:layout_toRightOf="@+id/issues"
        android:text="Date:" />

    <Button
        android:id="@+id/favorite"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:background="@drawable/ic_baseline_gray_24" />
</RelativeLayout>
